# open-simulation-interface

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .protolint.yaml  .travis.yml  CMakeLists.txt  LICENSE  README.md  README.md.orig  VERSION  VERSION.orig  annotated.html  annotated_dup.js  classes.html  common.proto  convert-to-proto3.sh  detected_landmark.proto  detected_lane.proto  detected_object.proto  detected_occupant.proto  dir_4ce840ca17835ab0d4c8797c1dfcc450.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_8a29680ac58f070fa77498b7cfb0e5d9.html  dir_aab3332a77760f74556dcb4aee61b405.html  dir_e30a3627d4634a7e6626d4822461e086.html  dir_e30a3627d4634a7e6626d4822461e086_dep.map  dir_e30a3627d4634a7e6626d4822461e086_dep.md5  doxygen-config.cmake.in  doxygen_config.cmake.in  environment.proto  functions.html  functions_b.html  functions_c.html  functions_d.html  functions_dup.js  functions_e.html  functions_enum.html  functions_eval.html  functions_eval.js  (+1797 more)
.antora/: antora.yml
.antora/modules/interface/: images  nav.adoc
.github/: .pyspelling.yml  copilot-instructions.md  pull_request_template.md  spelling_custom_words_en_US.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: antora-generator.yml  protobuf.yml  pypi-pub-manual.yml  release.yml
doc/: README.md  _config.adoc  commenting.rst  coordinatesystem.rst  description.rst  description.rst.orig  description_REMOTE_346756.rst  fileformat.rst  howtocontribute.rst  howtocontribute.rst.orig  installation.rst  interfaceconventions.rst  interfaceconventions.rst.orig  interfaceconventions.rst.orig.orig  linux.rst  open-simulation-interface_user_guide.adoc  osifiles.rst  reference.rst  releases.rst  releases.rst.orig  versioning.rst  windows.rst
doc-rewrite/adhoc/: ASAM_OSI_User-Guide.adoc  foreword.adoc
doc-rewrite/adhoc/1_Introduction/: chapter.adoc
doc-rewrite/adhoc/Appendix/: bibliography.adoc  chapter.adoc  terms_and_definitions.adoc
doc-rewrite/adhoc/Extending_OSI/: chapter.adoc  conventions.adoc  how_to_extend_osi.adoc
doc-rewrite/adhoc/Foreword/: foreword.adoc
doc-rewrite/adhoc/Improving_performance/: chapter.adoc  improving_performance.adoc
doc-rewrite/adhoc/Integrating_OSI_models/: chapter.adoc  integrating_model_x.adoc
doc-rewrite/adhoc/Introduction/: changes.adoc  chapter.adoc  contributing.adoc  conventions.adoc  deliverables.adoc  overview.adoc  statements.adoc
doc/architecture/: architecture_overview.adoc  coordinate_systems.adoc  data_layer.adoc  environmental_effect_model.adoc  feature_data.adoc  formatting_script.adoc  formatting_scripts.adoc  ground_truth.adoc  host_vehicle_data.adoc  logical_model.adoc  motion_request.adoc  packaging_layer.adoc  proto-files.adoc  reference_points.adoc  reference_points_coordinate_systems.adoc  sensor_data.adoc  sensor_model.adoc  sensor_view.adoc  sensor_view_configuration.adoc  streaming_update.adoc  test_scripts.adoc  timestamps_overview.adoc  trace_file_binary_and_human_readable_formats.adoc  trace_file_example.adoc  trace_file_formats.adoc  trace_file_mcap_format.adoc  trace_file_naming.adoc  trace_file_overview_file_formats.adoc  traffic_command.adoc  traffic_command_update.adoc  traffic_participant.adoc  traffic_update.adoc  vehicle_dynamics.adoc
doc/misc/: osi_reference.adoc  osi_vision.adoc
doc/releases/: compatibility.adoc  releases.adoc  v02.00.adoc  v02.00.rst  v02.01.00.rst  v02.01.adoc  v02.01.rst  v02.02.adoc  v02.02.rst  v03.00.00.rst  v03.00.adoc  v03.00.rst  v03.01.00.rst  v03.01.adoc  v03.01.rst  v03.01.rst.orig  v03.02.adoc  v03.02.rst  v03.02.rst.orig  v03.03.adoc  v03.03.rst  versioning.adoc
doc/setup/: including_osi_dev_projects.adoc  installing_linux.adoc  installing_linux_cpp.adoc  installing_linux_python.adoc  installing_macos.adoc  installing_prerequisites.adoc  installing_windows.adoc  installing_windows_cpp.adoc  installing_windows_python.adoc  setting_up_osi.adoc  setting_up_osi_cpp.adoc  setting_up_osi_python.adoc  using_osi_support_tools.adoc
doc/usecases/: benchmark_integration_gpu_radar.adoc  fusing_sensor_outputs.adoc  generating_osi_traces.adoc  injecting_faults.adoc  modeling_camera_electronics.adoc  modeling_lidar_sensor.adoc  modeling_traffic_participant.adoc  transforming_coordinate_systems.adoc
format/: OSITrace.py  __init__.py  osi2read.py  txt2osi.py
gen_scenarios/: gen_scenario.py
gen_scenarios/performace/: clock.h  performance.cpp  performance.py
githooks/: pre-commit
hooks/: pre-commit
local_build_tools/: asciidoctor.bat  compose.yml  windows_convert_symlinks(ADMIN).bat
osi/: CMakeLists.txt  detected_landmark.proto  detected_object.proto  object.proto  sensor_data_for_recording.proto
osi3/: osi_datarecording.proto  osi_detectedlane.proto  osi_detectedobject.proto  osi_detectedoccupant.proto  osi_detectedroadmarking.proto  osi_detectedtrafficlight.proto  osi_detectedtrafficsign.proto  osi_environment.proto  osi_featuredata.proto  osi_groundtruth.proto  osi_hostvehicledata.proto  osi_lane.proto  osi_object.proto  osi_occupant.proto  osi_roadmarking.proto  osi_sensordata.proto  osi_sensorview.proto  osi_sensorviewconfiguration.proto  osi_trafficlight.proto  osi_trafficsign.proto
osi3trace/: OSITrace.py  osi2read.py  osi_trace.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  (+66 more)
tests/: test_comment_type.py  test_doxygen_output.py  test_invalid_comment.py  test_invalid_enum.py  test_invalid_html.py  test_invalid_message.py  test_invalid_punctuation.py  test_invalid_tabs.py  test_newline.py  test_non_ascii.py  test_osi_trace.py  test_rules.py  test_units.py
tests/data/: small_test.txt.lzma
(+44 files in other folders)
